# shard

./: .gitignore  FLEET_STATE.md  LICENSE  NOTICE  README.md  STATE.md  pyproject.toml
docs/: ARCHITECTURE.md  DEPLOY_READINESS.md  INTEGRATION.md  M25_ENGINE.md  NETWORK.md  PROOF.md  ROADMAP.md
phase0/: DEPLOY_M25.md  fastverify.py  gateway.py  get_model.py  heal_hot.py  heal_hot_libp2p.py  launch_libp2p.py  launch_ngram.py  launch_oss.py  launch_swarm.py  m25_config_probe.py  m25_gateway.py  m25_gqa_check.py  m25_lossless_check.py  m25_moe_probe.py  m25_pipe.py  m25_pull.py  m25_pull_range.py  m25_ring.py  m25_scatter.py  m25_scatter_pipe.py  m25_stage.py  m25_tools.py  make_oss_receipt.py  mesh.py  ngram_draft.py  node.py  node_fetch.py  node_kv.py  node_pull.py  pipeline.py  publish_manifest.py  requirements_vmoe.txt  setup_box.sh  specdec.py  specpipe.py  tree.py  wire.py
research/: bench_fused_moe.py  draft_server.py  glm_bootstrap.sh  glm_cg_fwdcmp.py  glm_cg_rollback.py  glm_draft_compat.py  glm_gen.py  glm_inspect.py  glm_probe_cudagraph.py  glm_probe_dense.py  glm_probe_fastverify.py  glm_probe_groupedmoe.py  glm_probe_quantfloor.py  glm_probe_realconfig.py  glm_stage_fp8.py  glm_stage_node.py  glm_stage_nvfp4.py  glm_stage_nvfp4_full.py  glm_stage_nvfp4_multi.py  glm_stage_quant.py  glm_stage_quant_multi.py  glm_swarm.py  glm_swarm_nvfp4.py  glm_swarm_nvfp4_cg.py  glm_swarm_nvfp4_cg_diff.py  glm_swarm_nvfp4_kv.py  glm_swarm_nvfp4_ngram_pipe.py  glm_swarm_nvfp4_spec.py  launch_node.sh  m25_batch_test.py  m25_ctx_table.py  m25_cudagraph_char.py  (+19 more)
(+26 files in other folders)
